--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
 
 
 .green-bg-style {
 
-    background-color: #023020 ;
+    background-color: #022317 ;
 
 
 }
@@ -12,17 +12,27 @@
 .names-green {
 
     color: #00A36C ;
-    font-family: "Schibsted Grotesk", serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
+    font-family: "Cinzel Decorative", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 8rem;
+
+}
+
+.names-green:hover {
+
+    color: #ffffff ;
+    font-family: "Cinzel Decorative", serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 8rem;
 }
 
 .special-name {
 
     font-family: "Schibsted Grotesk", serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-
-
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-size: 2rem;
 
 }
