--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap");
+body {
+  font-size: 16px;
+}
+
 .green-bg-style {
   background-color: #022317;
 }
@@ -6,6 +10,7 @@
 .names-green {
   color: #00A36C;
   font-family: "Cinzel Decorative", serif;
+  margin-left: 3rem;
   font-weight: 700;
   font-style: normal;
   font-size: 8rem;
@@ -14,6 +19,7 @@
 .names-green:hover {
   color: #ffffff;
   font-family: "Cinzel Decorative", serif;
+  margin-left: 3rem;
   font-weight: 700;
   font-style: normal;
   font-size: 8rem;
