--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
 
-
+body {
+    font-size: 16px;
+}
 .green-bg-style {
 
     background-color: #022317 ;
@@ -13,6 +15,7 @@
 
     color: #00A36C ;
     font-family: "Cinzel Decorative", serif;
+    margin-left: 3rem;
     font-weight: 700;
     font-style: normal;
     font-size: 8rem;
@@ -23,6 +26,7 @@
 
     color: #ffffff ;
     font-family: "Cinzel Decorative", serif;
+    margin-left: 3rem;
     font-weight: 700;
     font-style: normal;
     font-size: 8rem;
